Restructure and start to add tests
- Parameterize the S3 bucket for checkpoints
- Remove sbt-assembly plugin
- Wire up spark-packages plugin
- Bring in scalatest and spark-testing-base
- Set up travis.yml for tests, cache Ivy deps
- Remove Postgres jar from the repo (it's no longer needed with `sbt assembly`)